Rename addon from ember-emoji-mart to ember-emoji-picker

--- a/addon/styles/_ember-emoji-picker.scss
+++ b/addon/styles/_ember-emoji-picker.scss
@@ -1,10 +1,10 @@
-.ember-emoji-mart,
-.ember-emoji-mart * {
+.ember-emoji-picker,
+.ember-emoji-picker * {
   box-sizing: border-box;
   line-height: 1.15;
 }
 
-.ember-emoji-mart {
+.ember-emoji-picker {
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
   font-size: 16px;
   display: inline-block;
