--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -1,4 +1,4 @@
-@import "ember-emoji-mart";
+@import "ember-emoji-picker";
 @import "emoji-entity.scss";
 @import "emoji-picker.scss";
 @import "emoji-picker/anchors";
