--- a/addon/styles/emoji-picker/_anchors.scss
+++ b/addon/styles/emoji-picker/_anchors.scss
@@ -1,19 +1,5 @@
 .ember-emoji-picker {
-  .emoji-mart-bar {
-    border: 0 solid #d9d9d9;
-  }
-  .emoji-mart-bar:first-child {
-    border-bottom-width: 1px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-  }
-  .emoji-mart-bar:last-child {
-    border-top-width: 1px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-  }
-
-  .emoji-mart-anchors {
+  .eep-anchors {
     display: flex;
     justify-content: space-between;
     padding: 0 6px;
@@ -21,40 +7,43 @@
     line-height: 0;
   }
 
-  .emoji-mart-anchor {
+  .eep-anchor {
     position: relative;
     flex: 1;
     text-align: center;
     padding: 12px 4px;
     overflow: hidden;
     transition: color .1s ease-out;
-  }
-  .emoji-mart-anchor:hover,
-  .emoji-mart-anchor-selected {
-    color: #464646;
-  }
 
-  .emoji-mart-anchor-selected .emoji-mart-anchor-bar {
-    bottom: 0;
-  }
+    &:hover,
+    &--selected {
+      color: #464646;
+    }
 
-  .emoji-mart-anchor-bar {
-    position: absolute;
-    bottom: -3px;
-    left: 0;
-    width: 100%;
-    height: 3px;
-    background-color: #464646;
-  }
+    &--selected {
+      .eep-anchor_bar {
+        bottom: 0;
+      }
+    }
 
-  .emoji-mart-anchors i {
-    display: inline-block;
-    width: 100%;
-    max-width: 22px;
-  }
+    &_bar {
+      position: absolute;
+      bottom: -3px;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background-color: #464646;
+    }
 
-  .emoji-mart-anchors svg {
-    fill: currentColor;
-    max-height: 18px;
+    i {
+      display: inline-block;
+      width: 100%;
+      max-width: 22px;
+    }
+
+    svg {
+      fill: currentColor;
+      max-height: 18px;
+    }
   }
 }
