--- a/addon/styles/emoji-picker/_category.scss
+++ b/addon/styles/emoji-picker/_category.scss
@@ -1,57 +1,69 @@
 .ember-emoji-picker {
-  .emoji-mart-scroll {
+
+  .eep-categories {
     overflow-y: scroll;
     height: 270px;
     padding: 0 6px 6px 6px;
   }
 
-  .emoji-mart-category .emoji-mart-emoji span {
-    z-index: 1;
-    position: relative;
-    text-align: center;
-    cursor: default;
+  .eep-category {
+
+    &-label {
+      z-index: 2;
+      position: relative;
+      position: -webkit-sticky;
+      position: sticky;
+      top: 0;
+
+      span {
+        display: block;
+        width: 100%;
+        font-weight: 500;
+        padding: 5px 6px;
+        background-color: #fff;
+        background-color: rgba(255, 255, 255, .95);
+      }
+    }
+
+    .eep-emoji {
+
+      &:hover:before {
+        z-index: 0;
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #f4f4f4;
+        border-radius: 100%;
+      }
+
+      span {
+        z-index: 1;
+        position: relative;
+        text-align: center;
+        cursor: default;
+      }
+    }
   }
 
-  .emoji-mart-category .emoji-mart-emoji:hover:before {
-    z-index: 0;
-    content: "";
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background-color: #f4f4f4;
-    border-radius: 100%;
-  }
-
-  .emoji-mart-category-label {
-    z-index: 2;
-    position: relative;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-  }
-
-  .emoji-mart-category-label span {
-    display: block;
-    width: 100%;
-    font-weight: 500;
-    padding: 5px 6px;
-    background-color: #fff;
-    background-color: rgba(255, 255, 255, .95);
-  }
-
-  .emoji-mart-no-results {
+  .eep-no-results {
     font-size: 14px;
     text-align: center;
     padding-top: 70px;
     color: #858585;
-  }
-  .emoji-mart-no-results .emoji-mart-category-label {
-    display: none;
-  }
-  .emoji-mart-no-results .emoji-mart-no-results-label {
-    margin-top: .2em;
-  }
-  .emoji-mart-no-results .emoji-mart-emoji:hover:before {
-    content: none;
+
+    &-label {
+      margin-top: .2em;
+    }
+
+    .eep-category-label {
+      display: none;
+    }
+
+    .eep-emoji:hover:before {
+      content: none;
+    }
   }
 }
