--- a/addon/styles/_ember-emoji-picker.scss
+++ b/addon/styles/_ember-emoji-picker.scss
@@ -8,6 +8,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
   font-size: 16px;
   display: inline-block;
+  min-width: 302px;
   color: #222427;
   border: 1px solid #d9d9d9;
   border-radius: 5px;
