--- a/addon/styles/emoji-picker/_search.scss
+++ b/addon/styles/emoji-picker/_search.scss
@@ -1,15 +1,16 @@
 .ember-emoji-picker {
-  .emoji-mart-search {
+  .eep-search {
     margin-top: 6px;
     padding: 0 6px;
-  }
-  .emoji-mart-search input {
-    font-size: 16px;
-    display: block;
-    width: 100%;
-    padding: .2em .6em;
-    border-radius: 25px;
-    border: 1px solid #d9d9d9;
-    outline: 0;
+
+    input {
+      font-size: 16px;
+      display: block;
+      width: 100%;
+      padding: .2em .6em;
+      border-radius: 25px;
+      border: 1px solid #d9d9d9;
+      outline: 0;
+    }
   }
 }
